content/v1.3.0/zh/api/catalog-other.md
---
title: 其它 Other 类目录 / Class Catalog
extra:
  sidebar: auto
---
# 其它 Other 类目录

## 心智模型

先把 `其它 Other 类目录` 当作这个子系统的入口或数据节点来理解：先看属性代表什么状态，再看方法允许你做什么。

本页列出 1.3.0 源码中该领域全部公开类型，按命名空间分组。共 **30** 个类型，其中 **27** 个已有深度文档页（带链接）。由 `tools/gen-class-catalog.mjs` 从源码自动生成。

> 图例：C=class S=struct I=interface E=enum。带 🔗 的已有深度文档页。

## (global) (5)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [EmptyGamepadNavigationContext](/v1.3.15/zh/api/campaign-ext/EmptyGamepadNavigationContext) | 🔗 |
| C | [GauntletGamepadNavigationContext](/v1.3.15/zh/api/campaign-ext/GauntletGamepadNavigationContext) | 🔗 |
| I | [IChatHandler](/v1.3.15/zh/api/campaign-ext/IChatHandler) | 🔗 |
| I | [IGamepadNavigationContext](/v1.3.15/zh/api/campaign-ext/IGamepadNavigationContext) | 🔗 |
| E | [WindingOrder](/v1.3.15/zh/api/campaign-ext/WindingOrder) | 🔗 |

## MBHelpers (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | BannerHelper | — |

## Sandobx.GauntletUI.Missions (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletMainAgentDetectionView](./campaign-ext/GauntletMainAgentDetectionView) | 🔗 |

## Storymode.Missions (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | MissionState | — |
| C | [SneakIntoTheVillaMissionController](./campaign-ext/SneakIntoTheVillaMissionController) | 🔗 |

## TaleWorlds.AchievementSystem (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Achievement](/v1.3.15/zh/api/campaign-ext/Achievement) | 🔗 |
| C | [AchievementManager](/v1.3.15/zh/api/campaign-ext/AchievementManager) | 🔗 |
| I | [IAchievementService](/v1.3.15/zh/api/campaign-ext/IAchievementService) | 🔗 |
| C | [TestAchievementService](/v1.3.15/zh/api/campaign-ext/TestAchievementService) | 🔗 |

## TaleWorlds.ActivitySystem (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Activity](/v1.3.15/zh/api/campaign-ext/Activity) | 🔗 |
| C | [ActivityManager](/v1.3.15/zh/api/campaign-ext/ActivityManager) | 🔗 |
| E | [ActivityOutcome](/v1.3.15/zh/api/campaign-ext/ActivityOutcome) | 🔗 |
| E | [ActivityTransition](/v1.3.15/zh/api/campaign-ext/ActivityTransition) | 🔗 |
| I | [IActivityService](/v1.3.15/zh/api/campaign-ext/IActivityService) | 🔗 |
| C | [TestActivityService](/v1.3.15/zh/api/campaign-ext/TestActivityService) | 🔗 |

## TaleWorlds.LinQuick (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [LinQuick](/v1.3.15/zh/api/campaign-ext/LinQuick) | 🔗 |
| C | [Min](/v1.3.15/zh/api/campaign-ext/Min) | 🔗 |

## TaleWorlds.ModuleManager (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [DependedModule](/v1.3.15/zh/api/campaign-ext/DependedModule) | 🔗 |
| C | Extensions | — |
| I | [IPlatformModuleExtension](/v1.3.15/zh/api/campaign-ext/IPlatformModuleExtension) | 🔗 |
| E | [ModuleCategory](/v1.3.15/zh/api/campaign-ext/ModuleCategory) | 🔗 |
| C | [ModuleHelper](/v1.3.15/zh/api/campaign-ext/ModuleHelper) | 🔗 |
| C | [ModuleInfo](/v1.3.15/zh/api/campaign-ext/ModuleInfo) | 🔗 |
| E | [ModuleType](/v1.3.15/zh/api/campaign-ext/ModuleType) | 🔗 |
| C | [SubModuleInfo](/v1.3.15/zh/api/campaign-ext/SubModuleInfo) | 🔗 |
| E | [SubModuleTags](/v1.3.15/zh/api/campaign-ext/SubModuleTags) | 🔗 |
