content/v1.3.15/zh/api/catalog-other.md
---
title: 其它 Other 类目录 / Class Catalog
extra:
  sidebar: auto
---
# 其它 Other 类目录

## 心智模型

先把 `其它 Other 类目录` 当作这个子系统的入口或数据节点来理解：先看属性代表什么状态，再看方法允许你做什么。

本页列出 1.3.15 源码中该领域全部公开类型，按命名空间分组。共 **62** 个类型，其中 **56** 个已有深度文档页（带链接）。由 `tools/gen-class-catalog.mjs` 从源码自动生成。

> 图例：C=class S=struct I=interface E=enum。带 🔗 的已有深度文档页。

## (global) (8)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [BuildInfo](./campaign-ext/BuildInfo) | 🔗 |
| C | [EmptyGamepadNavigationContext](./campaign-ext/EmptyGamepadNavigationContext) | 🔗 |
| C | [GauntletGamepadNavigationContext](./campaign-ext/GauntletGamepadNavigationContext) | 🔗 |
| I | [IChatHandler](./campaign-ext/IChatHandler) | 🔗 |
| I | [IGamepadNavigationContext](./campaign-ext/IGamepadNavigationContext) | 🔗 |
| C | [MonoNativeFunctionWrapperAttribute](./campaign-ext/MonoNativeFunctionWrapperAttribute) | 🔗 |
| C | [MonoPInvokeCallbackAttribute](./campaign-ext/MonoPInvokeCallbackAttribute) | 🔗 |
| E | [WindingOrder](./campaign-ext/WindingOrder) | 🔗 |

## MBHelpers (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | BannerHelper | — |

## Sandbox.View.GameStates (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [PreloadState](./campaign-ext/PreloadState) | 🔗 |

## TaleWorlds.AchievementSystem (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Achievement](./campaign-ext/Achievement) | 🔗 |
| C | [AchievementManager](./campaign-ext/AchievementManager) | 🔗 |
| I | [IAchievementService](./campaign-ext/IAchievementService) | 🔗 |
| C | [TestAchievementService](./campaign-ext/TestAchievementService) | 🔗 |

## TaleWorlds.ActivitySystem (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Activity](./campaign-ext/Activity) | 🔗 |
| C | [ActivityManager](./campaign-ext/ActivityManager) | 🔗 |
| E | [ActivityOutcome](./campaign-ext/ActivityOutcome) | 🔗 |
| E | [ActivityTransition](./campaign-ext/ActivityTransition) | 🔗 |
| I | [IActivityService](./campaign-ext/IActivityService) | 🔗 |
| C | [TestActivityService](./campaign-ext/TestActivityService) | 🔗 |

## TaleWorlds.Avatar.PlayerServices (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AvatarServices](./campaign-ext/AvatarServices) | 🔗 |

## TaleWorlds.LinQuick (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [LinQuick](./campaign-ext/LinQuick) | 🔗 |
| C | [Min](./campaign-ext/Min) | 🔗 |

## TaleWorlds.ModuleManager (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [DependedModule](./campaign-ext/DependedModule) | 🔗 |
| C | Extensions | — |
| I | [IPlatformModuleExtension](./campaign-ext/IPlatformModuleExtension) | 🔗 |
| E | [ModuleCategory](./campaign-ext/ModuleCategory) | 🔗 |
| C | [ModuleHelper](./campaign-ext/ModuleHelper) | 🔗 |
| C | [ModuleInfo](./campaign-ext/ModuleInfo) | 🔗 |
| E | [ModuleType](./campaign-ext/ModuleType) | 🔗 |
| C | [SubModuleInfo](./campaign-ext/SubModuleInfo) | 🔗 |
| E | [SubModuleTags](./campaign-ext/SubModuleTags) | 🔗 |

## TaleWorlds.Starter.Library (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | Program | — |

## psai.Editor (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AudioData](./campaign-ext/AudioData) | 🔗 |
| E | [CompatibilityReason](./campaign-ext/CompatibilityReason) | 🔗 |
| E | [CompatibilitySetting](./campaign-ext/CompatibilitySetting) | 🔗 |
| E | [CompatibilityType](./campaign-ext/CompatibilityType) | 🔗 |
| C | [Group](./campaign-ext/Group) | 🔗 |
| C | [ProjectProperties](./campaign-ext/ProjectProperties) | 🔗 |
| C | [PsaiMusicEntity](./campaign-ext/PsaiMusicEntity) | 🔗 |
| C | [PsaiProject](./campaign-ext/PsaiProject) | 🔗 |
| C | [Segment](./campaign-ext/Segment) | 🔗 |
| C | [Theme](./campaign-ext/Theme) | 🔗 |

## psai.net (19)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | AudioData | — |
| C | [AudioPlaybackLayerChannelStandalone](./campaign-ext/AudioPlaybackLayerChannelStandalone) | 🔗 |
| S | [Follower](./campaign-ext/Follower) | 🔗 |
| C | [PlaybackChannel](./campaign-ext/PlaybackChannel) | 🔗 |
| C | [PsaiCore](./campaign-ext/PsaiCore) | 🔗 |
| S | [PsaiInfo](./campaign-ext/PsaiInfo) | 🔗 |
| E | [PsaiPlayMode](./campaign-ext/PsaiPlayMode) | 🔗 |
| E | [PsaiResult](./campaign-ext/PsaiResult) | 🔗 |
| E | [PsaiState](./campaign-ext/PsaiState) | 🔗 |
| C | Segment | — |
| C | [SegmentInfo](./campaign-ext/SegmentInfo) | 🔗 |
| E | [SegmentSuitability](./campaign-ext/SegmentSuitability) | 🔗 |
| C | [Soundtrack](./campaign-ext/Soundtrack) | 🔗 |
| C | [SoundtrackInfo](./campaign-ext/SoundtrackInfo) | 🔗 |
| C | Theme | — |
| C | [ThemeInfo](./campaign-ext/ThemeInfo) | 🔗 |
| E | [ThemeInterruptionBehavior](./campaign-ext/ThemeInterruptionBehavior) | 🔗 |
| E | [ThemeType](./campaign-ext/ThemeType) | 🔗 |
| C | [Weighting](./campaign-ext/Weighting) | 🔗 |
